--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+v 2.0.1
+Included indonesian translation (translated by ibnuda)
+
 v 2.0
 Large code rewrites and speed optimizations
 Lots of bug fixes along with UI tweaks
